@@ -7,6 +7,8 @@ Summary of important user-visible changes for instrument-control 0.4.0+
         fprintf
         fread
         fwrite
+
+  ** UDP: add .property access to the object
  
   ** minor document updates
 
